--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.58"
 chrono = "0.4.19"
 dirs = "4.0.0"
+fmutex = "0.1.0"
 notify-rust = "4.5.8"
 reqwest = { version = "0.11.11", features = ["blocking"] }
 scryfall = "0.10.3"
