--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ dirs = "4.0.0"
 fmutex = "0.1.0"
 futures-util = "0.3.26"
 notify-rust = "4.5.8"
-reqwest = { version = "0.11.11", features = ["blocking"] }
+reqwest = { version = "0.11.11", features = ["stream"] }
 scryfall = "0.12.3"
 tempfile = "3.3.0"
 tokio = { features = ["rt", "process", "io-util", "fs", "macros", "sync", "parking_lot"], version = "1.25.0" }
