--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "foretell"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,5 +15,5 @@ notify-rust = "4.5.8"
 reqwest = { version = "0.11.11", features = ["stream"] }
 scryfall = "0.16"
 tempfile = "3.3.0"
-tokio = { features = ["rt", "process", "io-util", "fs", "macros", "sync", "parking_lot"], version = "1.25.0" }
+tokio = { features = ["rt-multi-thread", "process", "io-util", "fs", "macros", "sync", "parking_lot"], version = "1.25.0" }
 tokio-stream = { version = "0.1.12", features = ["io-util"] }
